--- a/quiz/templates/quiz/index.html
+++ b/quiz/templates/quiz/index.html
@@ -1,4 +1,5 @@
 {% extends 'quiz/layout.html' %}
 {% block body %}
-<button><a href="create">Create Quiz</a></button>
+    <button><a href="create">Create Quiz</a></button>
+    <button><a href="participate">Participate in Quiz</a></button>
 {% endblock %}
